--- a/core/templates/detail_student.html
+++ b/core/templates/detail_student.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h1>Detalhes do Aluno</h1>
-    <p><strong>Nome:</strong> {{ student.name }}</p>
+    <p><strong>Nome:</strong> {{ student.nome }}</p>
     <p><strong>Email:</strong> {{ student.email }}</p>
-    <p><strong>Endereço:</strong> {{ student.address }}</p>
-    <p><strong>Data de Nascimento:</strong> {{ student.date_of_birth }}</p>
-    <!-- Adicione mais informações conforme necessário -->
+    <p><strong>Endereço:</strong> {{ student.endereco }}</p>
+    <p><strong>Data de Nascimento:</strong> {{ student.data_de_nascimento }}</p>
+    <p><strong>Cidade:</strong> {{ student.cidade}}</p>
+    <p><strong>Curso:</strong> {{ student.curso}}</p>
     <a href="{% url 'student' %}">Voltar para a lista de alunos</a>
 </body>
 </html>
