--- a/core/templates/student.html
+++ b/core/templates/student.html
@@ -31,17 +31,21 @@
         <thead>
             <tr>
                 <th>Nome</th>
+                <th>data de nascimento</th>
                 <th>Email</th>
-                <th>Endereço</th>
-                <th>Ações</th> <!-- Nova coluna para botões de ação -->
+                <th>Cidade</th>
+                <th>Curso</th>
+                <th>Ações</th> 
             </tr>
         </thead>
         <tbody>
             {% for student in students %}
             <tr>
-                <td><a href="{% url 'detalhes_aluno' student.pk %}">{{ student.name }}</a></td>
+                <td><a href="{% url 'detalhes_aluno' student.pk %}">{{ student.nome }}</a></td>
+                <td>{{ student.data_de_nascimento }}
                 <td>{{ student.email }}</td>
-                <td>{{ student.address }}</td>
+                <td>{{ student.cidade }}</td>
+                <td>{{ student.curso }}</td>
                 <td>
                     <a href="{% url 'edit_student' student.pk %}">Editar</a>
                     <a href="{% url 'excluir_aluno' student.pk %}">Excluir</a>
